# Ants-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  antsagain  cmake_install.cmake  re-ants
include/: ant.hpp  colony.hpp  food.hpp  fps.hpp  trail.hpp  world.hpp
src/: Makefile  ant.cpp  colony.cpp  food.cpp  main.cpp  sfml-app  trail.cpp  world.cpp
src/entities/: ant.cpp  ant.h
src/util/: util.h
src/world/: cell.cpp  cell.h  colony.cpp  colony.h  grid.cpp  grid.h  windowManager.cpp  windowManager.h  world.cpp  world.h
